using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerStatesScript : MonoBehaviour
{
    //[SerializeField]
    //PlayerScript playerScript = null;

    internal bool isCrounching = false;
    internal bool isMoving = false;
    internal bool isOnGround = true;
    internal bool isHiding = false;

    
}
